fix: overflow search textfield description

--- a/static/css/results.css
+++ b/static/css/results.css
@@ -41,6 +41,7 @@ Date: November 2021
     color: var(--pink);
     margin-bottom: 8px;
     padding-left: 4px;
+    width: calc(100% - 106px);
 }
 
 
@@ -336,6 +337,9 @@ Date: November 2021
         margin-bottom: 20px;
     }
 
+    .search-p {
+        width: 100%;
+    }
 
     .search-button {
         margin-left: 0;
